fixed a bug with the typing-text animation forcing a line wrap

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body {
   border-right: 2px solid #fff;
   animation: typing-text steps(40) 3s infinite, blink ease 0.3s infinite;
   text-wrap: nowrap;
+  white-space: nowrap;
   display: inline-block;
   width: max-content;
   width: 0;
